fix: [CDS-82036]: environment details overlapping the aux navbar and envType hanging in the middle (#18585)

--- a/src/modules/75-cd/components/EnvironmentsV2/EnvironmentDetails/EnvironmentDetails.module.scss
+++ b/src/modules/75-cd/components/EnvironmentsV2/EnvironmentDetails/EnvironmentDetails.module.scss
@@ -121,7 +121,7 @@
 }
 
 .name {
-  width: 900px;
+  max-width: 900px;
 }
 
 .nameSectionWhenRemote {
